YaCy: The Search Engine with the friendly whale

version 0.50
	* ADDED: Media Search
	* UPDATED: Result Ranking
	* UPDATED: Crawl Monitor
	* CHANGED: Migrated to the new Database Structure
	* ADDED: XSS protection for all pages as default.
	* ADDED: searchResults structure.

version 0.49
	* CHANGED: New Database Structure for Index and URL Storage
	* UPDATED: Enhanced SOAP support
	* ADDED: Flash (experimental), MS Excel and Powerpoint parser
	
version 0.48
	* UPDATED: Snippet generation
	* ADDED: Optional filter in online log and different colors in log messages
	* ADDED: Indexing of files that are loaded for snippet-generation
	* ADDED: Protocol for YaCy Bookmarks export/input: posts/get from the del.icio.us api
	
version 0.47
	* CHANGED: The whole interface is now xHTML
	* ADDED: Crawler/Indexing Monitor
	* ADDED: Surftips
	* ADDED: Crawler for FTP
	* ADDED: fully controlled DHT cache
	* ADDED: write cache for LURLs
	* ADDED: new Database Structure
	* UPDATED: external Parsers
	* CHANGED: Enhanced SOAP services
	* FIXED: Wrong ranking calculation
	* FIXED: version number presentation
	* FIXED: many UTF-8 fixes.

version 0.46
	* ADDED: more authentication Methods (cookieAuth)
	* ADDED: Form-Login on User.html
	* ADDED: nice Errorpage for httpauth-fail.
	* ADDED: support to generate gettext locales and parse them.
	* ADDED: Italian and Slovakian language file
	* CHANGED: new dirlisting support for empty directories instead of copying dir.* into them.
	* CHANGED: do not copy welcome.* / dir.*. We use a overlay instead.

version 0.45
	* UPDATED: new Design of search page
	* ADDED: Image search
	* ADDED: Recrawl option
	* ADDED: auto-dom-filter for the crawler
	* ADDED: link per domain limitation for the crawler
	* ADDED: blog in the menu
	* FIXED: ViewProfile now shows the local profile, too
	* ADDED: new caches for indexes from dht transmission
	* ADDED: a basic bookmarkscache to speed up the bookmark system
	* UPDATED: html parser to support image tags