@@ -7,6 +7,7 @@ version 0.50
 	* CHANGED: Migrated to the new Database Structure
 	* ADDED: XSS protection for all pages as default.
 	* ADDED: searchResults structure.
+	* CHANGED: the searchtemplates are now generated from a searchResults structure in the servlets.
 
 version 0.49
 	* CHANGED: New Database Structure for Index and URL Storage
